[package]
name = "sway-easyfocus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.17"
gtk-layer-shell = { version = "0.6", features = ["v0_6"] }

swayipc = "3.0"

clap = { version = "4.3", features = ["derive"] }
