[package]
name = "sway-easyfocus"
authors = ["Ethan Zhang <ethanz4@illinois.edu>"]
description = "A tool to help efficiently focus windows in Sway inspired by i3-easyfocus."
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/edzdez/sway-easyfocus"
readme = "README.md"
keywords = ["cli", "sway"]
categories = ["command-line-utilities"]
exclude = ["screenshots/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.17"
gtk-layer-shell = { version = "0.6", features = ["v0_6"] }

swayipc = "3.0"

clap = { version = "4.3", features = ["derive"] }
